--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -137,7 +137,7 @@
     <div class="shape"></div>
     <div class="shape"></div>
 </div>
-<form method="post" action="/login">
+<form th:action="@{/login}" method="post">
     <h3>Login Here</h3>
 
     <label for="username">Username</label>
