--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Log in - Market</title>
+    <title>Sign up - Market</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -34,8 +34,8 @@
         }
         .shape:first-child{
             background: linear-gradient(
-                    #ffffff,
-                    #757575
+                    #1845ad,
+                    #23a2f6
             );
             left: -80px;
             top: -80px;
@@ -44,14 +44,12 @@
             background: linear-gradient(
                     to right,
                     #ff512f,
-                    #ff0000
+                    #f09819
             );
             right: -30px;
             bottom: -80px;
         }
         form{
-            /*height: 570px;*/
-            /*width: 400px;*/
             background-size: cover;
             background-color: rgba(255,255,255,0.13);
             position: absolute;
@@ -136,7 +134,7 @@
         .social i{
             margin-right: 4px;
         }
-        .sign-up{
+        .log-in{
             margin-top: 30px;
             display: flex;
         }
@@ -150,8 +148,8 @@
     <div class="shape"></div>
     <div class="shape"></div>
 </div>
-<form th:action="@{/login}" th:object="${user}" method="post">
-    <h3>Login Here</h3>
+<form th:action="@{/signup}" th:object="${user}" method="post">
+    <h3>Create account</h3>
     <p th:text="${message}"></p>
     <label for="login">Username</label>
     <input type="text" placeholder="Username" id="login" th:field="*{login}">
@@ -159,13 +157,12 @@
     <label for="password">Password</label>
     <input type="password" placeholder="Password" id="password" th:field="*{password}">
 
-    <button>Log In</button>
+    <button>Sign up</button>
     <div class="social">
         <div class="go"><i class="fab fa-google"></i>  Google</div>
         <div class="fb"><i class="fab fa-facebook"></i>  Facebook</div>
     </div>
-    <p class="sign-up">Don't have account?<span class="whitespace"></span><b><a href="/signup">Sign up</a></b></p>
+    <p class="log-in">Already have account?<span class="whitespace"></span><b><a href="/login">Log in</a></b></p>
 </form>
-
 </body>
 </html>
