--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
 <nav class="w3-sidebar w3-bar-block w3-white w3-collapse w3-top" style="z-index:3;width:250px" id="mySidebar">
     <div class="w3-container w3-display-container w3-padding-16">
         <i onclick="w3_close()" class="fa fa-remove w3-hide-large w3-button w3-display-topright"></i>
-        <h3 class="w3-wide"><b>LOGO</b></h3>
+        <h3 class="w3-wide"><b>MARKET</b></h3>
     </div>
     <div class="w3-padding-64 w3-large w3-text-grey" style="font-weight:bold">
         <a href="#" class="w3-bar-item w3-button">Shirts</a>
@@ -64,8 +64,12 @@
         <p class="w3-right">
             <i class="fa fa-shopping-cart w3-margin-right"></i>
             <i class="fa fa-search"></i>
-            <a href="/login" style="text-decoration:none;">Log in</a>
-        </p>
+<!--        <div th:if="${#httpServletRequest.remoteUser == null}">-->
+            <button onclick="location.href='/login'" style="border: none; background: none; cursor: pointer; margin: 0; padding: 0;">Log In</button>
+<!--        </div>-->
+<!--        <div th:if="${#httpServletRequest.remoteUser != null}">-->
+<!--            <button onclick="location.href='/account'">Personal Account</button>-->
+<!--        </div>-->
     </header>
 
     <!-- Image header -->
