--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -83,65 +83,17 @@
         </div>
     </div>
 
+    <!-- Product grid -->
     <div class="w3-container w3-text-grey" id="jeans">
-        <p>8 items</p>
+        <p th:if="${products != null}" th:text="${products.size()} + ' items'">8 items</p>
+        <p th:if="${products == null}">0 items</p>
     </div>
 
-    <!-- Product grid -->
     <div class="w3-row w3-grayscale">
-        <div class="w3-col l3 s6">
+        <div class="w3-col l3 s6" th:each="product : ${products}">
             <div class="w3-container">
-                <img src="/images/bw_sneakers.jpeg" style="width:100%" alt="black and white sneakers">
-                <p>Ripped Skinny Jeans<br><b>$24.99</b></p>
-            </div>
-            <div class="w3-container">
-                <img src="/images/bw_sneakers.jpeg" style="width:100%" alt="black and white sneakers">
-                <p>Mega Ripped Jeans<br><b>$19.99</b></p>
-            </div>
-        </div>
-
-        <div class="w3-col l3 s6">
-            <div class="w3-container">
-                <div class="w3-display-container">
-                    <img src="/images/bw_sneakers.jpeg" style="width:100%" alt="black and white sneakers">
-                    <span class="w3-tag w3-display-topleft">New</span>
-                    <div class="w3-display-middle w3-display-hover">
-                        <button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
-                    </div>
-                </div>
-                <p>Mega Ripped Jeans<br><b>$19.99</b></p>
-            </div>
-            <div class="w3-container">
-                <img src="/images/bw_sneakers.jpeg" style="width:100%" alt="black and white sneakers">
-                <p>Washed Skinny Jeans<br><b>$20.50</b></p>
-            </div>
-        </div>
-
-        <div class="w3-col l3 s6">
-            <div class="w3-container">
-                <img src="/images/bw_sneakers.jpeg" style="width:100%" alt="black and white sneakers">
-                <p>Washed Skinny Jeans<br><b>$20.50</b></p>
-            </div>
-            <div class="w3-container">
-                <div class="w3-display-container">
-                    <img src="/images/bw_sneakers.jpeg" style="width:100%" alt="black and white sneakers">
-                    <span class="w3-tag w3-display-topleft">Sale</span>
-                    <div class="w3-display-middle w3-display-hover">
-                        <button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
-                    </div>
-                </div>
-                <p>Vintage Skinny Jeans<br><b class="w3-text-red">$14.99</b></p>
-            </div>
-        </div>
-
-        <div class="w3-col l3 s6">
-            <div class="w3-container">
-                <img src="/images/bw_sneakers.jpeg" style="width:100%" alt="black and white sneakers">
-                <p>Vintage Skinny Jeans<br><b>$14.99</b></p>
-            </div>
-            <div class="w3-container">
-                <img src="/images/bw_sneakers.jpeg" style="width:100%" alt="black and white sneakers">
-                <p>Ripped Skinny Jeans<br><b>$24.99</b></p>
+                <img th:src="@{'/images/' + ${product.model} + '.jpg'}" style="width:100%" th:alt="${product.model}">
+                <p th:text="${product.brand} + ' '  + ${product.model} + ' - $' + ${product.price}"></p>
             </div>
         </div>
     </div>
