--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,20 +22,11 @@
         <h3 class="w3-wide"><b>MARKET</b></h3>
     </div>
     <div class="w3-padding-64 w3-large w3-text-grey" style="font-weight:bold">
-        <a href="#" class="w3-bar-item w3-button">Shirts</a>
-        <a href="#" class="w3-bar-item w3-button">Dresses</a>
-        <a onclick="myAccFunc()" href="javascript:void(0)" class="w3-button w3-block w3-white w3-left-align" id="myBtn">
-            Jeans <i class="fa fa-caret-down"></i>
-        </a>
-        <div id="demoAcc" class="w3-bar-block w3-hide w3-padding-large w3-medium">
-            <a href="#" class="w3-bar-item w3-button w3-light-grey"><i class="fa fa-caret-right w3-margin-right"></i>Skinny</a>
-            <a href="#" class="w3-bar-item w3-button">Relaxed</a>
-            <a href="#" class="w3-bar-item w3-button">Bootcut</a>
-            <a href="#" class="w3-bar-item w3-button">Straight</a>
-        </div>
-        <a href="#" class="w3-bar-item w3-button">Jackets</a>
-        <a href="#" class="w3-bar-item w3-button">Gymwear</a>
-        <a href="#" class="w3-bar-item w3-button">Blazers</a>
+        <a href="#" class="w3-bar-item w3-button">T-shirts</a>
+        <a href="#" class="w3-bar-item w3-button">Pants </a>
+        <a href="#" class="w3-bar-item w3-button">Sweaters</a>
+        <a href="#" class="w3-bar-item w3-button">Shorts</a>
+        <a href="#" class="w3-bar-item w3-button">Hoods</a>
         <a href="#" class="w3-bar-item w3-button">Shoes</a>
     </div>
     <a href="#footer" class="w3-bar-item w3-button w3-padding">Contact</a>
@@ -60,7 +51,6 @@
 
     <!-- Top header -->
     <header class="w3-container w3-xlarge">
-        <p class="w3-left">Jeans</p>
         <p class="w3-right">
             <i class="fa fa-shopping-cart w3-margin-right"></i>
             <i class="fa fa-search"></i>
@@ -74,11 +64,11 @@
 
     <!-- Image header -->
     <div class="w3-display-container w3-container">
-        <img src="/images/man_in_sneakers.jpeg" alt="Jeans" style="width:100%">
+        <img src="/images/Best-sneakers-2024.webp" alt="Jeans" style="width:100%">
         <div class="w3-display-topleft w3-text-white" style="padding:24px 48px">
             <h1 class="w3-jumbo w3-hide-small">New arrivals</h1>
             <h1 class="w3-hide-large w3-hide-medium">New arrivals</h1>
-            <h1 class="w3-hide-small">COLLECTION 2016</h1>
+            <h1 class="w3-hide-small">COLLECTION 2024</h1>
             <p><a href="#jeans" class="w3-button w3-black w3-padding-large w3-large">SHOP NOW</a></p>
         </div>
     </div>
