--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,15 @@
         body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
     </style>
 </head>
+<style>
+    button{
+        border: none;
+        background: none;
+        cursor: pointer;
+        margin-left: 15px;
+        padding: 0;
+    }
+</style>
 <body class="w3-content" style="max-width:1200px">
 
 <!-- Sidebar/menu -->
@@ -54,12 +63,8 @@
         <p class="w3-right">
             <i class="fa fa-shopping-cart w3-margin-right"></i>
             <i class="fa fa-search"></i>
-<!--        <div th:if="${#httpServletRequest.remoteUser == null}">-->
-            <button onclick="location.href='/login'" style="border: none; background: none; cursor: pointer; margin: 0; padding: 0;">Log In</button>
-<!--        </div>-->
-<!--        <div th:if="${#httpServletRequest.remoteUser != null}">-->
-<!--            <button onclick="location.href='/account'">Personal Account</button>-->
-<!--        </div>-->
+            <button th:unless="${loggedIn}" onclick="location.href='/login'">Log In</button>
+            <button th:if="${loggedIn}" onclick="location.href='/account'"><i class="fa fa-user"></i></button>
     </header>
 
     <!-- Image header -->
