--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,24 +11,20 @@
     <style>
         .w3-sidebar a {font-family: "Roboto", sans-serif}
         body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
+        button{
+            border: none;
+            background: none;
+            cursor: pointer;
+        }
     </style>
 </head>
-<style>
-    button{
-        border: none;
-        background: none;
-        cursor: pointer;
-        margin-left: 15px;
-        padding: 0;
-    }
-</style>
 <body class="w3-content" style="max-width:1200px">
 
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-white w3-collapse w3-top" style="z-index:3;width:250px" id="mySidebar">
     <div class="w3-container w3-display-container w3-padding-16">
         <i onclick="w3_close()" class="fa fa-remove w3-hide-large w3-button w3-display-topright"></i>
-        <h3 class="w3-wide"><b>MARKET</b></h3>
+        <h3 class="w3-wide"><b><button onclick="location.href='/'">MARKET</button></b></h3>
     </div>
     <div class="w3-padding-64 w3-large w3-text-grey" style="font-weight:bold">
         <a href="#" class="w3-bar-item w3-button">T-shirts</a>
@@ -45,7 +41,7 @@
 
 <!-- Top menu on small screens -->
 <header class="w3-bar w3-top w3-hide-large w3-black w3-xlarge">
-    <div class="w3-bar-item w3-padding-24 w3-wide">LOGO</div>
+    <div class="w3-bar-item w3-padding-24 w3-wide"><button onclick="location.href='/'">MARKET</button></div>
     <a href="javascript:void(0)" class="w3-bar-item w3-button w3-padding-24 w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></a>
 </header>
 
@@ -60,13 +56,13 @@
 
     <!-- Top header -->
     <header class="w3-container w3-xlarge">
-        <p style="float: left" th:text="${username}"></p>
+        <p style="float: left" th:text="${greeting}"></p>
         <p class="w3-right">
             <i class="fa fa-shopping-cart w3-margin-right"></i>
             <i class="fa fa-search"></i>
             <button th:unless="${loggedIn}" onclick="location.href='/login'">Log In</button>
-                <button th:if="${loggedIn}" onclick="location.href='/profile'"><i class="fa fa-user"></i></button>
-                <button th:if="${loggedIn}" onclick="location.href='/logout'">Log out</button>
+            <button th:if="${loggedIn}" onclick="location.href='/profile'"><i class="fa fa-user"></i></button>
+            <button th:if="${loggedIn}" onclick="location.href='/logout'">Log out</button>
         </p>
     </header>
 
