--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
     <div class="shape"></div>
     <div class="shape"></div>
 </div>
-<form th:action="@{/login}" th:object="${user}" method="post">
+<form th:object="${user}" method="post">
     <h3>Login Here</h3>
     <p th:text="${message}"></p>
     <label for="login">Username</label>
