--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -79,7 +79,7 @@
 
     <!-- Product grid -->
     <div class="w3-container w3-text-grey" id="jeans">
-        <p th:if="${products != null}" th:text="${products.size()} + ' items'">8 items</p>
+        <p th:if="${products != null}" th:text="${products.size()} + ' items'"></p>
         <p th:if="${products == null}">0 items</p>
     </div>
 
