Cart page updated

--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -66,7 +66,7 @@
 
     <!-- Profile -->
     <div class="container" style="display: flex">
-        Thank you for your order
+        <h6>Thank you for your order!</h6>
     </div>
 
     <!-- Subscribe section -->
