--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -16,6 +16,26 @@
             background: none;
             cursor: pointer;
         }
+        .cart-table{
+            display: table;
+        }
+        .cart-row{
+            height: 135px;
+        }
+        .image-cell{
+            width: 20%;
+            white-space: nowrap;
+        }
+        .image-cell img {
+            max-height: 100%;
+            max-width: 100%;
+            height: auto;
+            width: auto;
+            display: block;
+        }
+        .price-cell{
+            text-align: right;
+        }
     </style>
 </head>
 <body class="w3-content" style="max-width:1200px">
@@ -67,7 +87,7 @@
     <!-- Profile -->
     <div class="container" style="display: flex">
         <div class="image-container" style="width: 20%">
-            <img src="/images/Profile_image.png" alt="Image Description" style="max-width: 100%">
+            <img src="/images/Profile_image.png" alt="Image Description" style="max-width: 100%; padding: 20px">
         </div>
         <div class="orders-container" style="width: 80%">
             <h2 class="w3-container">Cart</h2>
@@ -76,22 +96,22 @@
                 <p th:if="${productsInCart == null}">0 items</p>
             </div>
 
-            <div class="w3-row">
-                <div class="w3-col l3 s6" th:each="product : ${productsInCart}">
-                    <div class="w3-container">
-                        <a th:href="'/products/' + ${product.model}">
-                            <img th:src="@{'/images/' + ${product.model} + '.jpg'}" style="width:100%" th:alt="${product.model}">
-                            <p th:text="${product.brand} + ' ' + ${product.model} + ' - $' + ${product.price}"></p>
-                        </a>
-                    </div>
-                </div>
+            <table class="cart-table">
+                <tr th:each="product : ${productsInCart}" class="cart-row">
+                    <a th:href="'/products/' + ${product.model}">
+                        <td class="image-cell"><img th:src="@{'/images/' + ${product.model} + '.jpg'}" style="max-height:100%" th:alt="${product.model}"></td>
+                        <td><p th:text="${product.brand} + ' ' + ${product.model}"></p></td>
+                        <td class="price-cell"><p th:text="'$' + ${product.price}"></p></td>
+                    </a>
+                </tr>
+            </table>
+            <div class="w3-container w3-padding-16">
+                <button class="w3-button w3-green" onclick="location.href='/order'" style="width: 100%">Submit order</button>
             </div>
         </div>
-
-        <div class="w3-container w3-padding-16">
-            <button class="w3-button w3-green" onclick="location.href='/order'">Order</button>
-        </div>
     </div>
+
+    <!--Submit the order-->
 
 
     <!-- Subscribe section -->
